<resources>
    <string name="app_name">Chess</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="fb_login_btn">Continue with Facebook</string>
    <string name="google_login_btn">Continue with Google</string>
    <string name="welcomeText">Play chess. Sharpen skills. \nEnjoy the game.\.</string>
    <string name="signUpBtn">Get Started</string>
    <string name="loginBtn">LOG IN</string>
    <string name="guestBtn">Play as Guest</string>
    <string name="orSeparator">OR</string>


</resources>