<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGray"
    android:padding="24dp">

    <!-- Chess.com Logo -->
    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/king_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0" />

    <!-- Log In Button -->
    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="onLoginClick"
        android:text="@string/loginBtn"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/headerImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/headerImage" />

    <!-- Heading Text -->

    <!-- Pawn Image Placeholder -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/welcomeText"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerImage" />

    <!-- Get Started Button -->

    <!-- OR Separator -->
    <ImageView
        android:id="@+id/pawnPlaceholder"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/knight_logo_stroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/rounded_button"
        android:text="@string/signUpBtn"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@id/pawnPlaceholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />

    <!-- Left Line -->

    <TextView
        android:id="@+id/orSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="10dp"
        android:text="@string/orSeparator"
        android:textColor="@color/lighterGray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGetStarted" />

    <!-- Right Line -->
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:background="#444444"
        app:layout_constraintEnd_toStartOf="@id/orSeparator"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/orSeparator" />

    <!-- Continue with Google Button -->

    <!-- Continue with Facebook Button -->

    <!-- Play as Guest Button -->

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="#444444"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/orSeparator"
        app:layout_constraintTop_toTopOf="@id/orSeparator" />

    <LinearLayout
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/rounded_dark_button"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orSeparator">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/google_logo"
            android:layout_marginEnd="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_login_btn"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_dark_button"
        android:gravity="center"
        android:onClick="onFacebookLogin"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGoogle" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/facebook_logo"
            android:layout_marginEnd="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fb_login_btn"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="false"/>

    </LinearLayout>

    <TextView
        android:id="@+id/btnGuest"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:onClick="onGuestLogin"
        android:text="@string/guestBtn"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
